Start working with json-server, loading menu-list-items from db.json

--- a/src/components/menu-list-item/menu-list-item.scss
+++ b/src/components/menu-list-item/menu-list-item.scss
@@ -1,22 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 .menu__card {
   width: 100%;
   font-size: 1rem;
   background: linear-gradient(180deg, rgba(146, 163, 168, 0.787) 0%, rgba(0, 0, 0, 0) 92%);
   box-shadow: 3px -5px 12px -9px rgba(0,0,0,0.66);
+  height: 420px;
 }
 
 .menu__card_font {
-    font-size: 1rem;
+  font-size: 0.9rem;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .menu__btn {
-  background: #ff8800;
+  background: rgba(118, 133, 139, 0.37);
   border: none;
   letter-spacing: 0.2px;
   &:hover{
-    background-color: rgba(111, 118, 121, 0.37);
+    background-color: #ff8800b6;
     transition: all 0.3s ease-in-out;
     
   }
@@ -29,7 +31,17 @@
 }
 
 .menu__title {
-  font-family: 'Raleway', sans-serif;
-  font-size: 1.2rem;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1rem;
   font-weight: 500;
+  height: 40px;
+}
+
+.img-size {
+  height: 250px;
+  width: 100%;
+}
+
+img {
+  object-fit: cover;
 }
