--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,24 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
-$font-jost: 'Jost', sans-serif;
+$font-montserrat: 'Montserrat', sans-serif;;
 
 h1 {
   color: rgb(44, 39, 4);
-  font-size: 4em;
+  font-size: 4vw;
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
 }
 
 p {
-  font-family: $font-jost;
+  font-family: $font-montserrat;
   font-size: 20px;
+  font-weight: 400;
 }
 
 .page {
   max-width: 1440px;
-  background: url(../../images/1.jpg);
   height:2000px;
   background-size: cover;
 }
@@ -33,3 +33,14 @@ p {
   background-size: cover;
 }
 
+.bgh {
+  background: url(../../images/1.jpg);
+  background-size: cover;
+  filter: blur(5px);
+  position: fixed;
+  left: 0; right: 0; top: 0; bottom: 0;
+}
+
+.header-bg {
+  font-size: 1rem;
+}
