--- a/src/components/menu-list-item/menu-list-item.scss
+++ b/src/components/menu-list-item/menu-list-item.scss
@@ -1,40 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-.menu__card {
-  width: 100%;
-  font-size: 1rem;
-  background: linear-gradient(180deg, rgba(146, 163, 168, 0.787) 0%, rgba(0, 0, 0, 0) 92%);
-  box-shadow: 3px -5px 12px -9px rgba(0,0,0,0.66);
-  height: 420px;
-}
-
-.menu__card_font {
-  font-size: 0.9rem;
-  font-family: 'Montserrat', sans-serif;
-}
-
-.menu__btn {
-  background: rgba(118, 133, 139, 0.37);
-  border: none;
-  letter-spacing: 0.2px;
-  &:hover{
-    background-color: #ff8800b6;
-    transition: all 0.3s ease-in-out;
-    
+.menu {
+  &__card {
+    width: 100%;
+    font-size: 1rem;
+    background: linear-gradient(180deg, rgba(146, 163, 168, 0.787) 0%, rgba(0, 0, 0, 0) 92%);
+    box-shadow: 3px -5px 12px -9px rgba(0,0,0,0.66);
+    height: 420px;
   }
-  &:visited {
-    background-color: black;
+  &__font {
+    font-size: 0.9rem;
+    font-family: 'Montserrat', sans-serif;
   }
-  &:focus {
-    box-shadow: none;
+  &__btn {
+    background: rgba(118, 133, 139, 0.37);
+    border: none;
+    letter-spacing: 0.2px;
+    &:hover{
+      background-color: #ff8800b6;
+      transition: all 0.3s ease-in-out;
+    }
+    &:visited {
+      background-color: black;
+    }
+    &:focus {
+      box-shadow: none;
+    }
   }
-}
-
-.menu__title {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1rem;
-  font-weight: 500;
-  height: 40px;
+  &__title {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
+    font-weight: 500;
+    height: 40px;
+  }
 }
 
 .img-size {
