--- a/src/components/cart/cart-table.scss
+++ b/src/components/cart/cart-table.scss
@@ -33,5 +33,13 @@
     transition: all 0.3s ease-in-out;
     background: rgba(91, 97, 98, 0.123);
   }
+  &__price {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+  }
+  &__quantity {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+  }
 }
 
